Grammar.txt
program			→ decl_list
decl_list		→ decl_list decl | decl
decl			→ var_decl
var_decl		→ type_spec IDENT; | type_spec IDENT [ ] ;
type_spec		→ char | int | double | short | long | float
stmt_list		→ stmt_list stmt | ε
stmt			→ expr_stmt
expr_stmt		→ expr ; | ;
expr			→ IDENT = expr | IDENT [ expr ] = expr
				→ expr + expr | expr - expr
				→ expr * expr | expr / expr
				→ ! expr | - expr | + expr
				→ IDENT | IDENT [ expr ] | IDENT ( args ) | IDENT . size
				→ BOOL_LIT | INT_LIT  | FLOAT_LIT | NEW type_spec [ expr ]
